tyring to create an elevator simulation

--- a/hotel_control_system/Makefile
+++ b/hotel_control_system/Makefile
@@ -6,16 +6,16 @@ main: main.o HotelControlSystem.o Floor.o Elevator.o
 	$(CC) $(LFLAGS) main.o HotelControlSystem.o Floor.o Elevator.o -o main
 
 main.o: main.cpp HotelControlSystem.h
-	g++ -c main.cpp
+	$(CC) $(CFLAGS) main.cpp
 
 HotelControlSystem.o: HotelControlSystem.cpp HotelControlSystem.h Elevator.h Floor.h
-	g++ -c  HotelControlSystem.cpp
+	$(CC) $(CFLAGS)  HotelControlSystem.cpp
 
 Floor.o: Floor.cpp Floor.h
-	g++ -c Floor.cpp
+	$(CC) $(CFLAGS) Floor.cpp
 
 Elevator.o: Elevator.cpp Elevator.h
-	g++ -c Elevator.cpp
+	$(CC) $(CFLAGS) Elevator.cpp
 
 clean:
 	rm *.o main
