added new request class for the request queue

--- a/hotel_control_system/Makefile
+++ b/hotel_control_system/Makefile
@@ -8,13 +8,13 @@ main: build/main.o build/HotelControlSystem.o build/Floor.o build/Elevator.o bui
 build/main.o: src/main.cpp src/HotelControlSystem.h
 	$(CC) $(CFLAGS) src/main.cpp -o build/main.o
 
-build/HotelControlSystem.o: src/HotelControlSystem.cpp src/HotelControlSystem.h src/Elevator.h src/Floor.h
+build/HotelControlSystem.o: src/HotelControlSystem.cpp src/HotelControlSystem.h src/Elevator.h src/Floor.h src/Request.h
 	$(CC) $(CFLAGS) src/HotelControlSystem.cpp -o build/HotelControlSystem.o
 
 build/Floor.o: src/Floor.cpp src/Floor.h
 	$(CC) $(CFLAGS) src/Floor.cpp -o build/Floor.o
 
-build/Elevator.o: src/Elevator.cpp src/Elevator.h
+build/Elevator.o: src/Elevator.cpp src/Elevator.h src/Request.h
 	$(CC) $(CFLAGS) src/Elevator.cpp -o build/Elevator.o
 
 build/Request.o: src/Request.cpp src/Request.h
