have some sort of multi threading scheme going, need to be able to make multiple instances of calls happen

--- a/hotel_control_system/Makefile
+++ b/hotel_control_system/Makefile
@@ -1,5 +1,5 @@
 CC = g++
-CFLAGS = -Wall -c -g
+CFLAGS = -Wall -c -g -std=c++14
 LFLAGS = -Wall
 
 main: build/main.o build/HotelControlSystem.o build/Floor.o build/Elevator.o build/Request.o
